--- a/res/layout/preferences_dialog.xml
+++ b/res/layout/preferences_dialog.xml
@@ -15,4 +15,12 @@
         android:text="@string/preferences_overlay_uninstall_flag"
         android:textSize="16sp" />
 
+    <Switch
+        android:id="@+id/preferences_forced_center_wallpaper"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:text="@string/preferences_forced_center_wallpaper"
+        android:textSize="16sp" />
+
 </LinearLayout>
