--- a/res/layout/theme_picker_activity.xml
+++ b/res/layout/theme_picker_activity.xml
@@ -4,4 +4,15 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ThemePickerActivity" />
+    tools:context=".ThemePickerActivity" >
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/themesGrid"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:paddingStart="@dimen/picker_grid_padding_start"
+        android:paddingTop="@dimen/picker_grid_padding_top"
+        android:paddingEnd="@dimen/picker_grid_padding_end"
+        android:paddingBottom="@dimen/picker_grid_padding_bottom"/>
+</FrameLayout>
