--- a/res/layout/theme_preview_content.xml
+++ b/res/layout/theme_preview_content.xml
@@ -16,6 +16,7 @@
                     android:id="@+id/theme_target_list"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:nestedScrollingEnabled="false"
                     android:clipToPadding="false"
                     android:paddingStart="@dimen/preview_grid_padding_start"
                     android:paddingTop="@dimen/preview_grid_padding_top"
