--- a/res/layout/theme_preview_activity.xml
+++ b/res/layout/theme_preview_activity.xml
@@ -1,104 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true" >
-
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/app_bar"
+    tools:context=".ThemePreviewActivity"
+    android:fitsSystemWindows="true">
+    
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <com.google.android.material.appbar.CollapsingToolbarLayout
+        android:layout_height="match_parent">
+        
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/app_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fitsSystemWindows="true"
-            app:contentScrim="?attr/colorPrimary"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:toolbarId="@+id/toolbar">
-
-            <LinearLayout
+            android:theme="@style/AppTheme.AppBarOverlay">
+            
+            <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/banner_image"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:adjustViewBounds="true" />
-
+                android:layout_height="wrap_content"
+                android:fitsSystemWindows="true"
+                app:contentScrim="?attr/colorPrimary"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed"
+                app:toolbarId="@+id/toolbar">
+                
                 <LinearLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="@dimen/preview_theme_info_height"
-                    android:background="?android:colorPrimary"
-                    android:clipChildren="false"
-                    android:orientation="vertical"
-                    android:paddingStart="@dimen/preview_theme_info_padding_start"
-                    android:paddingTop="@dimen/preview_theme_info_padding_top"
-                    android:paddingEnd="@dimen/preview_theme_info_padding_end"
-                    android:paddingBottom="@dimen/preview_theme_info_padding_bottom"
-                    android:theme="@android:style/Theme.DeviceDefault">
-
-                    <TextView
-                        android:id="@+id/theme_title"
-                        android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+                    
+                    <ImageView
+                        android:id="@+id/banner_image"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:ellipsize="end"
-                        android:maxLines="@integer/preview_theme_title_max_lines"
-                        android:paddingBottom="8.0dip"
-                        android:textAppearance="?android:textAppearanceMediumInverse"
-                        android:textColor="?android:textColorPrimary"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/theme_author"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:maxLines="@integer/preview_theme_author_max_lines"
-                        android:textAppearance="?android:textAppearanceSmallInverse"
-                        android:textColor="?android:textColorSecondary" />
+                        android:layout_gravity="center"
+                        android:adjustViewBounds="true" />
+                    
+                    <LinearLayout
+                        android:layout_width="fill_parent"
+                        android:layout_height="@dimen/preview_theme_info_height"
+                        android:background="?android:colorPrimary"
+                        android:clipChildren="false"
+                        android:orientation="vertical"
+                        android:paddingStart="@dimen/preview_theme_info_padding_start"
+                        android:paddingTop="@dimen/preview_theme_info_padding_top"
+                        android:paddingEnd="@dimen/preview_theme_info_padding_end"
+                        android:paddingBottom="@dimen/preview_theme_info_padding_bottom"
+                        android:theme="@android:style/Theme.DeviceDefault">
+                        
+                        <TextView
+                            android:id="@+id/theme_title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:ellipsize="end"
+                            android:maxLines="@integer/preview_theme_title_max_lines"
+                            android:paddingBottom="8.0dip"
+                            android:textAppearance="?android:textAppearanceMediumInverse"
+                            android:textColor="?android:textColorPrimary"
+                            android:textStyle="bold" />
+                        
+                        <TextView
+                            android:id="@+id/theme_author"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:maxLines="@integer/preview_theme_author_max_lines"
+                            android:textAppearance="?android:textAppearanceSmallInverse"
+                            android:textColor="?android:textColorSecondary" />
+                    </LinearLayout>
                 </LinearLayout>
-            </LinearLayout>
-
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin"
-                app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
-
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/apply_theme_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/fab_margin"
-        android:clickable="true"
-        android:contentDescription="@string/preview_menu_apply"
-        app:layout_anchor="@id/app_bar"
-        app:layout_anchorGravity="bottom|end"
-        app:srcCompat="@drawable/ic_apply_theme" />
-
-    <include
-        layout="@layout/theme_preview_content"
-        app:layout_anchor="@id/apply_theme_button"
-        app:layout_anchorGravity="bottom" />
-
-    <ImageView
-        android:id="@+id/preview_image_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:elevation="100dp"
-        android:background="@android:color/background_dark"
-        android:visibility="gone" />
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+                
+                <androidx.appcompat.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    app:layout_collapseMode="pin"
+                    app:popupTheme="@style/AppTheme.PopupOverlay" />
+            
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
+        
+        </com.google.android.material.appbar.AppBarLayout>
+        
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/apply_theme_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/fab_margin"
+            android:clickable="true"
+            android:contentDescription="@string/preview_menu_apply"
+            app:layout_anchor="@id/app_bar"
+            app:layout_anchorGravity="bottom|end"
+            app:srcCompat="@drawable/ic_apply_theme" />
+        
+        <include
+            layout="@layout/theme_preview_content"
+            app:layout_anchor="@id/apply_theme_button"
+            app:layout_anchorGravity="bottom" />
+        
+        <ImageView
+            android:id="@+id/preview_image_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:elevation="100dp"
+            android:background="@android:color/background_dark"
+            android:visibility="gone" />
+    
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
