--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -2,10 +2,12 @@
 <resources>
 
     <style name="AppTheme" parent="Theme.AppCompat.DayNight.DarkActionBar" />
-    <style name="AppTheme.NoActionBar">
+    
+    <style name="AppTheme.NoActionBar" parent="AppTheme" >
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
+    
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Dark" />
 
